--- a/_posts/2023-01-04-Post-exam.md
+++ b/_posts/2023-01-04-Post-exam.md
@@ -4,17 +4,10 @@ title: website cours
 ---
 
 
-## This is my team at Microsoft
-People in the picture are:
-- Arul
-- Fai
-- Scott
-- Me
 
-<!-- 
 -کار کردن با جنگو
  یک سایت رو در زمینه ای که به اون علاقه داشتیم درست کردیم   css , html  با استفاده از 
 
 [link addres](https://www.google.com/)
 
-![alt text](../assets/images/msn.jpg ) -->
+![alt text](../assets/images/msn.jpg ) 
